--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ picture: assets/images/profile.jpg
 # If you want to include your resume, set to true
 # and specify source (external or local).
 resume: true
-resume-external: true
-resume-url: https://google.com/?q=my+resume
+resume-local: true
+resume-url: atibhi.pdf
 
 url: http://aSquare14.github.io
 # your url: http://USERNAME.github.io
