--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Atibhi Agrawal
-bio: Veni, Vidi, Amavi
+bio: Live, Love, Laugh and sometimes Code !
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -35,7 +35,7 @@ disqus:
 
 # if you don't have any of social below, comment the line
 facebook: /profile.php?id=100001061927041
-#twitter: mytwitter
+twitter: /atibhi_a
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
