--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ github: aSquare14
 # stackoverflow: 7044681/mystackoverflow
 quora: Atibhi-Agrawal
 # reddit: username
-#medium: medium
+medium: atibhiagrawal
 # vimeo: myvimeo
 # lanyrd: mylanyrd
 email: Atibhi.Agrawal@iiitb.org
