--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-resume: true
-resume-local: true
-resume-url: atibhi.pdf
+resume: false
+resume-local: false
+#resume-url: atibhi.pdf
 
 url: http://aSquare14.github.io
 # your url: http://USERNAME.github.io
