--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Atibhi Agrawal
-bio: IIITB UnderGrad | RGSoC'18 Fellow | Intern at IISc | Alpha Nerd
+bio: Open Source and Tech Enthusiast | ECE UG @IIITB_Official 💻| @RailsGirlsSoC ' 18 at @ifmeorg ✨| Leader at LeanIn Chapter IIIT-B 🌈 | WIT#GHCI'18 scholar
 
 # twitter summary info
 description: A blog about technology and stuff related
