--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 # main text of home
 name: Atibhi Agrawal
-bio: Open Source 💻 | Diversity and Inclusion 🌈 | Google Intern 2020✨
+
+bio: Tech ♥️ | Art🎨 | Alum google, hackerrank , rgsoc, iiitb
+
 # twitter summary info
 description: My personal space on the World Wide Web
 
