update website after joining twitter

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # main text of home
 name: Atibhi Agrawal
 
-bio: Software Engineer 
+bio: Software Engineer at Twitter
 
 # twitter summary info
-description: My personal space on the World Wide Web
+description: My corner on the World Wide Web
 
 # if it's an external image, update below for true
 # better with square images
