--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,7 @@ projects: true
 about: true
 blog: true
 talks: true
+lists: true
 
 # do you want to show the "read time" of the posts?
 read-time: true
