--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # main text of home
 name: Atibhi Agrawal
 
-bio: Software Engineer at Twitter
+bio: Software Engineer at Amazon
 
 # twitter summary info
 description: My corner on the World Wide Web
